# graplot

./: Cargo.toml  README.md
.github/workflows/: rust-clippy.yml
examples/: 1x.rs  3d.rs  bar.rs  bar_colored.rs  collatz.rs  custom_scaling.rs  exp_fn.rs  graph.rs  graph_modified.rs  line_desc.rs  multiple_plots.rs  mutliple_windows.rs  pie_chart.rs  polynomial.rs  scatter.rs  sigmoid.rs  sine.rs  sine_wave.rs  squared.rs  tanh.rs  title_and_axis.rs  x3.rs  ys.rs
macroquad/: Cargo.toml
macroquad/src/: lib.rs  text.rs
miniquad/native/sapp-linux/src/: clipboard.rs  lib.rs  x_cursor.rs  xi_input.rs
miniquad/src/: graphics.rs  lib.rs
src/: bar.rs  eval.rs  graph.rs  lib.rs  line_desc.rs  plot.rs  polynomial.rs  render.rs  scatter.rs
src/graph/: graph.rs  mod.rs
src/plots/: bar.rs  mod.rs  pie.rs  plot.rs  plot3d.rs  scatter.rs
src/render/: bar.rs  graph.rs  mod.rs  pie.rs  plot.rs  plot3d.rs
tests/: 3d.rs  bar.rs  desc.rs  graph.rs  les.rs  markers.rs  pie.rs  plot.rs  poly.rs  scatter.rs  test.rs  test_end.rs
